fix z-index

--- a/src/app/components/menuBar/menuBar.module.css
+++ b/src/app/components/menuBar/menuBar.module.css
@@ -186,7 +186,7 @@
   opacity: 0;
   transition: all 1s ease-in;
   background-color: rgba(250, 250, 250, 1);
-  z-index: 99;
+  z-index: 999;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   overflow: hidden;
